--- a/SortsLibrary/SortsLibrary/SortsLibrary.csproj
+++ b/SortsLibrary/SortsLibrary/SortsLibrary.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Sorts.FiveHeap.cs" />
     <Compile Include="Sorts.Quick.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sorts.QuickInPlace.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
