--- a/SortsLibrary/SortsTests/SortsTests.csproj
+++ b/SortsLibrary/SortsTests/SortsTests.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FiveHeapSortTests.cs" />
     <Compile Include="QuickInPlaceSortTests.cs" />
     <Compile Include="QuickSortTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
