Implemented logic with files

--- a/SortsLibrary/SortApplication/SortApplication.csproj
+++ b/SortsLibrary/SortApplication/SortApplication.csproj
@@ -51,6 +51,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SortsLibrary\SortsLibrary.csproj">
+      <Project>{bd5b6813-bd44-4a53-9f81-f3b19082bec4}</Project>
+      <Name>SortsLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
