--- a/SortsLibrary/TestFileGenerator/TestFileGenerator.csproj
+++ b/SortsLibrary/TestFileGenerator/TestFileGenerator.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{035B8FD9-2D26-4600-86AD-95DEFEEAF7E5}</ProjectGuid>
+    <ProjectGuid>{A8484C49-CF41-4708-8FEE-6549842FE8F1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SortApplication</RootNamespace>
-    <AssemblyName>SortApplication</AssemblyName>
+    <RootNamespace>TestFileGenerator</RootNamespace>
+    <AssemblyName>TestFileGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,8 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CommandLine, Version=1.9.3.34, Culture=neutral, PublicKeyToken=490a9207c15e9e2a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="CommandLine">
       <HintPath>..\third_party\CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -45,18 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SortsLibrary\SortsLibrary.csproj">
-      <Project>{bd5b6813-bd44-4a53-9f81-f3b19082bec4}</Project>
-      <Name>SortsLibrary</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
